--- a/assets/scss/index-page.scss
+++ b/assets/scss/index-page.scss
@@ -10,18 +10,25 @@ $o-card-is-silent: false;
 
 @import 'o-grid/main';
 
-.alphaville-card-container {
-	margin-top: 10px;
-	margin-bottom: 10px;
+.alphaville-article-grid {
+	.alphaville-card-container {
+		margin-top: 10px;
+		margin-bottom: 10px;
 
-	a {
-		border-bottom: 0;
-	}
+		a {
+			border-bottom: 0;
+		}
 
-	@include oGridRespondTo(XL) {
-		&:last-child {
-			display: none;
+		@include oGridRespondTo(XL) {
+			&:last-child {
+				display: none;
+			}
 		}
 	}
+
+	.alphaville-card {
+		height: 300px;
+	}
 }
-@import './components/article-list';
+
+@import './article-list';
